# migration-studio

./: .gitignore  ARTIFACT_FIX.md  ARTIFACT_STORAGE_DEPLOYMENT.md  BREAKTHROUGH_JSON_DISCOVERY.md  COMPLETE_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  FINAL_SDK_REPORT.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_STATUS.md  LANDING_PAGE_DESIGN.md  MIGRATION_TO_PRODUCTION.md  NEXT_ITERATION_PLAN.md  PRODUCTION_FIX.md  README.md  SDK_COMPONENTS_ANALYSIS.md  SDK_DEPLOYMENT.md  SDK_INTEGRATION_PLAN.md  SDK_STATUS_REPORT.md  STORAGE_CONTROLS.md  WHAT_WE_CAN_EXTRACT.md  comprehensive_test.py  comprehensive_test_output.txt  deploy.sh  final_deduction.py  find_load_api.py  fix_jar_conflicts.py  java17_test_output.txt  render.yaml  setup_sdk.sh  sherlock_deep_dive.py  sherlock_investigate.py  test_ai_enhancement.py  test_ai_real.py  test_full_extraction.py  test_idt_sdk.py  test_java17.py  test_json_extraction.py  test_sdk.py  (+4 more)
backend/app/engines/validation_engine/: ARCHITECTURE.md  COMMANDS.md  EXECUTION_SUMMARY.md  README.md  cli.py  demo.py  pipeline_state.py  pyproject.toml  runner.py
backend/app/engines/validation_engine/lineage/: graph_export.py  lineage_builder.py
backend/app/engines/validation_engine/loaders/: cim_loader.py  target_loader.py
backend/app/engines/validation_engine/reports/: coverage_report.py  diff_report.py
backend/app/engines/validation_engine/tests/: test_cim_loader.py  test_coverage_validator.py  test_lineage_builder.py
backend/app/engines/validation_engine/validation_engine.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
(+138 files in other folders)
